syntax = "proto3";

package org;

option go_package = "genproto/org";

message OrgLeaveRequest{
    string orgName = 1;
	string domain = 2;
}

message OrgLeaveConfiguration{
	string orgId = 1;
	string orgName = 2;
	string title = 3;
	bool isFixed = 4;
	string frequency = 5;
    double leaveCount = 6;
	string leaveUnit = 7;
	double maxLeaveCount = 8;
	bool isCarryForwardAllowed = 9;
	double maxCarryForwardCount = 10;
	int32 bulkLeaveCount = 11;
	int32 bulkLeaveNoticeInDays = 12;
	bool isEncashmentAllowed = 13;
	int32 applicableAfterWorkingDays = 14;
	bool documentRequired = 15;
	bool weeklyOffAndHolidayIncluded = 16;
	bool isActive = 17;
	string description = 18;
	string yearStartDate = 19;
	string yearEndDate = 20;
	bool IncludeWeeklyOffDays = 21;
	bool IncludeHolidays = 22;
	double MaxLeaveAllowedCount = 23;
}

message OrgLeaveResponse{
	string orgName = 1;
	repeated OrgLeaveConfiguration orgLeaveConfigurations = 2;
}